# fujson

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yaml
src/: fujson.py  test_fusjon.py
