[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fujson"
version = "0.1.0"
authors = [
  { name="Stefaan Lippens", email="soxofaan@gmail.com" },
]
description = "Float formatting control for JSON encoding."
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/soxofaan/fujson"
"Bug Tracker" = "https://github.com/soxofaan/fujson/issues"
