[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fujson"
version = "0.1.0"
authors = [
  { name="Stefaan Lippens", email="soxofaan@gmail.com" },
]
description = "Float formatting control for JSON encoding."
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/soxofaan/fujson"
"Bug Tracker" = "https://github.com/soxofaan/fujson/issues"

[tool.hatch.build]
sources = ["src"]
include = ["src/*.py"]
